Fixed height and removed scrollbar

--- a/styles.css
+++ b/styles.css
@@ -18,10 +18,11 @@ html {
 }
 
 body {
-    padding: 30px 32px 32px;
+    /* padding: 30px 32px 32px; */
+    overflow: hidden;
     position: relative;
     font-family: 'Fira Sans', sans-serif;
-    padding-top: 15vh;
+    padding-top: 4vh;
 }
 
 .root{
